--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -50,19 +50,20 @@
       "disable_community_title": "清除扩展搜索缓存并返回仅验证的仓库",
       "discover_description": "探索社区软件包仓库",
       "discover_new": "发现新仓库",
+      "description": "这将下载并搜索由社区维护的完整 Scoop 仓库目录。这包括上万个具有不同质量级别的仓库。",
       "enable_expanded_search": "启用扩展搜索",
       "estimated_download_size": "估计下载大小：",
-      "expand_note": "注意：这将最初下载约14MB，但只有约0.3-4MB（取决于筛选器）将存储为优化的缓存。搜索将包括不同质量和维护级别的社区仓库。初始下载后，所有搜索将是即时和离线可用的。",
+      "expand_note": "初始化下载需要约14MB，但只有约0.3-4MB（取决于筛选器）作为优化缓存。搜索将包括不同质量和维护级别的社区仓库。初始化后，所有搜索将是即时和离线可用的。",
       "expand_search_title": "扩展搜索到所有仓库",
       "filter_options": "筛选选项",
       "large_dataset_warning": "大型数据集警告",
       "minimum_github_stars": "最低GitHub星标数",
       "note": "注意",
-      "results_count": "共找到 {{total}} 个仓库，显示 {{count}} 个",
+      "results_count": "找到 {{total}} 个仓库，显示 {{count}} 个",
       "search_buckets": "按名称搜索仓库...",
       "search_for_buckets": "搜索新的仓库进行安装",
       "sort_apps": "应用数",
-      "sort_by": "排序方式：",
+      "sort_by": "排序",
       "sort_name": "名称",
       "sort_relevance": "相关性",
       "sort_stars": "星标数",
