feat(settings): 改进更新检查与错误处理机制 [skip ci]
- 引入 createMemo 优化 channels 数据响应式计算
- 新增 sanitizeErrorMessage 函数统一处理并翻译各类更新错误信息
- 优化下载进度逻辑，确保数据正确更新
- 更新多语言文本内容，增强提示信息准确性
- 调整 UI 布局，在更新通道设置中添加“重启应用”按钮

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -368,7 +368,8 @@
   "settings": {
     "about": {
       "check_now": "Check Now",
-      "check_now_note": "You may need to restart after switching channels to apply the changes.",
+      "check_now_note": "You need to restart Rscoop after switching channels to apply the changes.",
+      "restart_app": "Restart App",
       "customized_version": "You are Using a customized version of Rscoop, maintained by Kwensiu.",
       "description": "A modern, powerful, and fast GUI for Scoop package manager on Windows.",
       "docs": "Docs",
@@ -407,7 +408,6 @@
       "active": "Active: {interval}",
       "auto_update_packages": "Auto Update Packages",
       "auto_update_packages_description": "Run full package update after bucket refresh",
-      "auto_update_packages_note": "When enabled, after each scheduled bucket update Rscoop will update all installed packages.",
       "custom_interval": "Custom Interval",
       "custom_interval_description": "Define a custom schedule (minutes, hours, days, weeks).",
       "days": "Days",
