--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,32 @@
     "installing": "Installing...",
     "later": "Later"
   },
+  "bottons.go_to_buckets": "",
+
+  "scoop_status": {
+    "title": "Scoop Status",
+    "everything_ok": "Everything is ok!",
+    "some_issues_found": "Some issues found",
+    "error_checking_status": "Error checking status",
+    "scoop_out_of_date": "Scoop is out of date. Run 'scoop update' to get the latest changes.",
+    "buckets_out_of_date": "Scoop bucket(s) are out of date. Click 'Go to Buckets' to get the latest changes.",
+    "network_failure": "Network failure occurred while checking for updates.",
+    "all_good_message": "Scoop is up to date and all packages are in good condition!",
+    "apps_with_issues": "Apps with Issues:",
+    
+    "table": {
+      "name": "Name",
+      "installed": "Installed",
+      "latest": "Latest",
+      "status": "Status"
+    },
+    
+    "badges": {
+      "held_package": "Held package",
+      "update_available": "Update Available"
+    }
+  },
+
   "bucket": {
     "card": {
       "branch": "Branch",
@@ -369,7 +395,6 @@
     "about": {
       "check_now": "Check Now",
       "check_now_note": "You need to restart Rscoop after switching channels to apply the changes.",
-      "restart_app": "Restart App",
       "customized_version": "You are Using a customized version of Rscoop, maintained by Kwensiu.",
       "description": "A modern, powerful, and fast GUI for Scoop package manager on Windows.",
       "docs": "Docs",
@@ -382,6 +407,7 @@
       "no_updates_available": "No Updates Available",
       "please_report_issues": "Please report any issues to my fork repository.",
       "release_notes": "Release Notes:",
+      "restart_app": "Restart App",
       "restart_now": "Restart Now",
       "retry": "Retry",
       "scoop_update_instruction": "Use {code} in your terminal to update.",
@@ -507,7 +533,124 @@
       "title": "Tray Support"
     }
   },
+  "settings.__i18n_ally_root__.about.checking_for_updates": "",
+  "settings.about.check_now": "",
+  "settings.about.check_now_note": "",
   "settings.about.checking_for_updates": "Checking for updates...",
+  "settings.about.customized_version": "",
+  "settings.about.description": "",
+  "settings.about.docs": "",
+  "settings.about.downloading_update": "",
+  "settings.about.install": "",
+  "settings.about.installing_update": "",
+  "settings.about.latest_version": "",
+  "settings.about.managed_by_scoop": "",
+  "settings.about.my_fork": "",
+  "settings.about.no_updates_available": "",
+  "settings.about.please_report_issues": "",
+  "settings.about.release_notes": "",
+  "settings.about.restart_app": "",
+  "settings.about.restart_now": "",
+  "settings.about.retry": "",
+  "settings.about.scoop_update_instruction": "",
+  "settings.about.update_available": "",
+  "settings.about.update_available_dialog": "",
+  "settings.about.update_complete": "",
+  "settings.about.update_failed": "",
+  "settings.about.update_ready": "",
+  "settings.about.update_status": "",
+  "settings.about.update_via_scoop": "",
+  "settings.about.updates_via_scoop": "",
+  "settings.about.upstream": "",
+  "settings.auto_cleanup.clean_old_versions": "",
+  "settings.auto_cleanup.clean_old_versions_description": "",
+  "settings.auto_cleanup.clean_outdated_cache": "",
+  "settings.auto_cleanup.clean_outdated_cache_description": "",
+  "settings.auto_cleanup.description": "",
+  "settings.auto_cleanup.title": "",
+  "settings.auto_cleanup.versions_to_keep": "",
+  "settings.bucket_auto_update.active": "",
+  "settings.bucket_auto_update.auto_update_packages": "",
+  "settings.bucket_auto_update.auto_update_packages_description": "",
+  "settings.bucket_auto_update.custom_interval": "",
+  "settings.bucket_auto_update.custom_interval_description": "",
+  "settings.bucket_auto_update.days": "",
+  "settings.bucket_auto_update.debug": "",
+  "settings.bucket_auto_update.debug_description": "",
+  "settings.bucket_auto_update.description": "",
+  "settings.bucket_auto_update.error": "",
+  "settings.bucket_auto_update.every_24_hours": "",
+  "settings.bucket_auto_update.every_24_hours_description": "",
+  "settings.bucket_auto_update.every_week": "",
+  "settings.bucket_auto_update.every_week_description": "",
+  "settings.bucket_auto_update.hours": "",
+  "settings.bucket_auto_update.interval_too_short": "",
+  "settings.bucket_auto_update.minimum_interval": "",
+  "settings.bucket_auto_update.minutes": "",
+  "settings.bucket_auto_update.off": "",
+  "settings.bucket_auto_update.off_description": "",
+  "settings.bucket_auto_update.quantity": "",
+  "settings.bucket_auto_update.save": "",
+  "settings.bucket_auto_update.saved": "",
+  "settings.bucket_auto_update.saving": "",
+  "settings.bucket_auto_update.title": "",
+  "settings.bucket_auto_update.unit": "",
+  "settings.bucket_auto_update.weeks": "",
+  "settings.category.about": "",
+  "settings.category.automation": "",
+  "settings.category.management": "",
+  "settings.category.security": "",
+  "settings.category.window_ui": "",
+  "settings.debug.description": "",
+  "settings.debug.title": "",
+  "settings.default_launch_page.buckets": "",
+  "settings.default_launch_page.description": "",
+  "settings.default_launch_page.doctor": "",
+  "settings.default_launch_page.installed": "",
+  "settings.default_launch_page.search": "",
+  "settings.default_launch_page.settings": "",
+  "settings.default_launch_page.title": "",
+  "settings.held_packages.description": "",
+  "settings.held_packages.no_packages_held": "",
+  "settings.held_packages.title": "",
+  "settings.held_packages.unhold": "",
+  "settings.scoop_configuration.auto": "",
+  "settings.scoop_configuration.auto_detect_description": "",
+  "settings.scoop_configuration.description": "",
+  "settings.scoop_configuration.detect_error": "",
+  "settings.scoop_configuration.detect_success": "",
+  "settings.scoop_configuration.invalid_directory": "",
+  "settings.scoop_configuration.load_error": "",
+  "settings.scoop_configuration.path_label": "",
+  "settings.scoop_configuration.path_placeholder": "",
+  "settings.scoop_configuration.save": "",
+  "settings.scoop_configuration.save_error": "",
+  "settings.scoop_configuration.save_success": "",
+  "settings.scoop_configuration.test": "",
+  "settings.scoop_configuration.title": "",
+  "settings.scoop_configuration.valid_directory": "",
+  "settings.scoop_configuration.validation_error": "",
+  "settings.scoop_configuration.validation_failed": "",
+  "settings.startup.description": "",
+  "settings.startup.title": "",
+  "settings.theme.description": "",
+  "settings.theme.switch_to_dark": "",
+  "settings.theme.switch_to_light": "",
+  "settings.theme.title": "",
+  "settings.title": "",
+  "settings.virustotal.api_key": "",
+  "settings.virustotal.api_key_placeholder": "",
+  "settings.virustotal.auto_scan_packages": "",
+  "settings.virustotal.description": "",
+  "settings.virustotal.invalid_api_key": "",
+  "settings.virustotal.load_error": "",
+  "settings.virustotal.loading": "",
+  "settings.virustotal.save": "",
+  "settings.virustotal.save_error": "",
+  "settings.virustotal.save_success": "",
+  "settings.virustotal.title": "",
+  "settings.window_behavior.description": "",
+  "settings.window_behavior.title": "",
   "status": {
     "error": "Error",
     "in_progress": "In Progress",
