feat(update): 添加测试更新命令和通道配置支持
新增 `test_update` 模块，提供测试当前更新配置的命令，包括获取当前目录、
可执行文件路径、是否为 Scoop 安装及平台信息。同时增强更新通道逻辑，
支持从设置中读取更新通道，并根据通道返回不同的更新信息接口地址。

在前端设置页面中增加对更新通道变更后的提示与日志输出，并优化了更新检查流程，
确保能正确反映当前所选通道对应的更新状态。本地化文本也已补充相关提示内容。

此外，调整 Tauri 配置文件，为 Windows 平台安装器添加自定义参数以避免创建桌面和任务栏快捷方式。

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -404,7 +404,8 @@
       "install": "Install",
       "installing_update": "Installing update...",
       "invalid_json_error": "Could not fetch update information. This may be due to network issues, GitHub API rate limits, or misconfiguration.",
-      "latest_version": "You're already using the latest version!",
+      "latest_version": "You're already using the latest version (v{{version}})!",
+      "latest_version_unknown": "You're already using the latest version (unknown)!",
       "managed_by_scoop": "Managed by Scoop",
       "my_fork": "Fork/Kwensiu",
       "network_error": "Network connection failed. Please check your internet connection and try again.",
@@ -627,8 +628,10 @@
     "description": "Choose which update channel to receive updates from.",
     "stable": "Stable",
     "stable_description": "Receive stable releases that are thoroughly tested and reliable.",
+    "stable_restart_required": "Switched to stable channel. Restart the app for changes to take effect.",
     "test": "Test",
     "test_description": "Receive test builds with the latest features and fixes before they're released to stable.",
+    "test_restart_required": "Switched to test channel. Restart the app for changes to take effect.",
     "test_warning_title": "Test Channel Warning",
     "title": "Update Channel"
   },
