--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -404,7 +404,8 @@
       "install": "安装",
       "installing_update": "正在安装更新...",
       "invalid_json_error": "无法获取更新信息。这可能是由于网络问题、GitHub API 速率限制或配置错误造成的。",
-      "latest_version": "您已经在使用最新版本！",
+      "latest_version": "您已经在使用最新版本 (v{{version}})！",
+      "latest_version_unknown": "您已经在使用最新版本（未知）！",
       "managed_by_scoop": "由 Scoop 管理",
       "my_fork": "Fork/Kwensiu",
       "network_error": "网络连接失败。请检查您的互联网连接并重试。",
@@ -627,8 +628,10 @@
     "description": "选择要接收更新的更新通道。",
     "stable": "稳定版",
     "stable_description": "接收经过全面测试且可靠的稳定版本发布。",
+    "stable_restart_required": "切换到稳定版通道，重启应用后生效。",
     "test": "测试版",
     "test_description": "接收测试版本，包含最新功能和修复，比正式版更早体验。",
+    "test_restart_required": "切换到测试版通道，重启应用后生效。",
     "test_warning_title": "测试通道警告",
     "title": "更新通道"
   },
