feat: add silent startup option integrated into startup settings
- Add silent startup feature that minimizes Rscoop to system tray on boot
- Integrate silent startup option within the startup settings card
- Show silent startup option only when auto-start is enabled (conditional display)
- Add backend Tauri commands for silent startup configuration
- Add silent startup setting to settings store with persistent storage
- Add internationalization support for silent startup in English and Chinese
- Update application startup logic to respect silent startup setting
- Use Windows registry to store silent startup preference

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -542,7 +542,11 @@
     },
     "startup": {
       "description": "Configure whether Rscoop should automatically start when Windows boots.",
-      "title": "Startup Settings"
+      "title": "Startup Settings",
+      "silent_startup": {
+        "title": "Silent Startup",
+        "description": "When enabled, Rscoop will start minimized to the system tray without showing the main window."
+      }
     },
     "theme": {
       "description": "Switch between dark and light themes.",
