fix: cache clearing logic and improve internationalization
- Remove incorrect clear_application_datacall from clearCacheData function to ensure cache clearing only affects WebView cache, not all app data
- Add localized error messages for cache clearing operations in both Chinese (zh.json) and English (en.json) locales
- Verify that factory reset functionality properly clears all application data including cache

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -448,6 +448,7 @@
       "clear_data": "Clear Data",
       "clear_data_description": "This will clear all cache data of Rscoop and restart App",
       "clear_error": "Clear Error",
+      "clear_cache_error": "Clear Cache Error",
       "clear_success": "Clear Success",
       "clearing": "Clearing",
       "data_directory": "Data Directory",
