refactor(settings): replace theme toggle with dropdown selection
- Replace checkbox toggle with select dropdown for theme selection
- Update locale strings to use light_mode and dark_mode instead of switch_to_dark/light
- Remove unused handleThemeChange function
- Modify theme setting logic to work with select input
- Update both English and Chinese localization files
- Remove sync-locales command from build process in tauri.conf.json

--- a/src-tauri/resources/locales/en.json
+++ b/src-tauri/resources/locales/en.json
@@ -578,10 +578,10 @@
       "title": "Startup Settings"
     },
     "theme": {
-      "description": "Switch between dark and light themes.",
-      "switch_to_dark": "Switch to Dark Mode",
-      "switch_to_light": "Switch to Light Mode",
-      "title": "Appearance"
+      "description": "Select your preferred application theme.",
+      "title": "Appearance",
+      "light_mode": "Light",
+      "dark_mode": "Dark"
     },
     "title": "Settings",
     "tray": {
