feat(powershell): add PowerShell executable selection and management
- Implemented dynamic PowerShell executable switching between pwsh and powershell
- Added automatic detection of available PowerShell versions on the system
- Created settings UI component for selecting preferred PowerShell executable
- Introduced static variable for runtime PowerShell executable configuration
- Added Tauri commands for getting available executables and setting preferences
- Integrated PowerShell settings into application store with persistence
- Updated initialization logic to apply PowerShell settings at startup

--- a/src-tauri/resources/locales/en.json
+++ b/src-tauri/resources/locales/en.json
@@ -507,6 +507,13 @@
       "title": "Held Packages Management",
       "unhold": "Unhold"
     },
+    "powershell": {
+      "autoDetect": "Auto Detect",
+      "description": "Select the PowerShell executable that Pailer uses to run Scoop commands.",
+      "pwsh": "PowerShell Core (pwsh)",
+      "title": "PowerShell Executable",
+      "windows": "Windows PowerShell"
+    },
     "scoopConfiguration": {
       "auto": "Auto",
       "autoDetectDescription": "Automatically detects Scoop installation using multiple methods: environment variables, scoop config command, and common installation paths.",
