refactor: add auto-detection, manual saving, and validation to Scoop path configuration
- Add factory reset script for cleaning app data and registry
- Add backend commands for checking manual configuration and directory existence
- Update path resolution to respect manual configuration flag
- Enhance frontend component with auto-detection, path validation, and improved UX
- Add locale strings for new validation messages
- Update settings store to persist manual configuration state

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -520,6 +520,7 @@
       "description": "Set the installation path for your Scoop directory. Changes will take effect immediately.",
       "detectError": "Failed to detect Scoop path. Please make sure the SCOOP environment variable is set correctly.",
       "detectSuccess": "Scoop path detected successfully!",
+      "directoryNotFound": "Directory does not exist",
       "invalidDirectory": "Directory exists but Scoop structure is invalid. Missing 'apps' or 'buckets' directories.",
       "loadError": "Could not load Scoop path setting.",
       "pathLabel": "Scoop Installation Path",
