--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -520,6 +520,7 @@
       "description": "设置您的 Scoop 目录安装路径，更改后建议重启以避免潜在问题。",
       "detectError": "无法检测 Scoop 路径。请确保正确设置了 SCOOP 环境变量。",
       "detectSuccess": "Scoop 路径检测成功！",
+      "directoryNotFound": "目录不存在",
       "invalidDirectory": "目录存在但 Scoop 结构无效。缺少 'apps' 或 'buckets' 目录。",
       "loadError": "无法加载 Scoop 路径设置。",
       "pathLabel": "Scoop 安装路径",
