refactor(installed-page): enhance loading functionality and UI for installed packages
- Enhance package loading with fallback logic for missing manifest.json and install.json files
- Unify locate_install_dir and resolve_install_root functions for consistent error handling
- Improve versioned install detection to apply only to Custom buckets with version directories
- Add manual refresh button and loading state to InstalledPage UI
- Update English and Chinese localization files with refresh key
- Minor model updates for better defaults
- Update i18n script in package.json to include type generation
- Regenerate dict-types.ts for updated locales

--- a/src-tauri/resources/locales/zh.json
+++ b/src-tauri/resources/locales/zh.json
@@ -257,6 +257,9 @@
       "title": "软件",
       "updateAll": "全部更新"
     },
+    "installed": {
+      "refresh": "刷新"
+    },
     "list": {
       "bucket": "仓库",
       "cannotUnhold": "无法取消保留（版本化安装）",
@@ -520,6 +523,7 @@
       "description": "设置您的 Scoop 目录安装路径，更改后建议重启以避免潜在问题。",
       "detectError": "无法检测 Scoop 路径。请确保正确设置了 SCOOP 环境变量。",
       "detectSuccess": "Scoop 路径检测成功！",
+      "directoryNotFound": "目录不存在",
       "invalidDirectory": "目录存在但 Scoop 结构无效。缺少 'apps' 或 'buckets' 目录。",
       "loadError": "无法加载 Scoop 路径设置。",
       "pathLabel": "Scoop 安装路径",
