refactor(installed-page): enhance loading functionality and UI for installed packages
- Enhance package loading with fallback logic for missing manifest.json and install.json files
- Unify locate_install_dir and resolve_install_root functions for consistent error handling
- Improve versioned install detection to apply only to Custom buckets with version directories
- Add manual refresh button and loading state to InstalledPage UI
- Update English and Chinese localization files with refresh key
- Minor model updates for better defaults
- Update i18n script in package.json to include type generation
- Regenerate dict-types.ts for updated locales

--- a/src-tauri/resources/locales/en.json
+++ b/src-tauri/resources/locales/en.json
@@ -278,7 +278,8 @@
       "updated": "Updated",
       "version": "Version",
       "versionedTooltip": "Versioned install - cannot be updated"
-    }
+    },
+    "refresh": "Refresh"
   },
   "language": {
     "description": "Select your preferred language for the application interface.",
