--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,8 +29,12 @@
       "noBucketsFound": "No buckets found",
       "refresh": "Refresh",
       "reloadLocal": "Reload Local Buckets",
+      "reloadLocalShort": "Local",
       "title": "Installed Buckets",
-      "updateAllGit": "Update All Git Buckets"
+      "updateAllGit": "Update All Git Buckets",
+      "updateAllGitShort": "Git",
+      "updateCompletionNote": "This may take a few seconds to complete",
+      "updatingBuckets": "Updating Buckets"
     },
     "page": {
       "description": "Manage Scoop buckets - repositories containing package manifests"
@@ -247,6 +251,8 @@
       "version": "Version"
     },
     "header": {
+      "allBuckets": "All Buckets",
+      "bucketLabel": "Bucket",
       "checkStatus": "Check Status",
       "filter": "Filter",
       "refresh": "Refresh",
@@ -520,6 +526,7 @@
       "description": "Set the installation path for your Scoop directory. Changes will take effect immediately.",
       "detectError": "Failed to detect Scoop path. Please make sure the SCOOP environment variable is set correctly.",
       "detectSuccess": "Scoop path detected successfully!",
+      "directoryNotFound": "Directory does not exist",
       "invalidDirectory": "Directory exists but Scoop structure is invalid. Missing 'apps' or 'buckets' directories.",
       "loadError": "Could not load Scoop path setting.",
       "pathLabel": "Scoop Installation Path",
